# wargus

./: .bzrignore  .cvsignore  .gitignore  .gitmodules  .travis.yml  1  CHANGELOG  CMakeLists.txt  CMakeSettings.json  COPYING-3rd  Image.hpp  Makefile  Makefile.linux  Makefile.mac  PngIO.hpp  README  README.md  aleonas_tales.cpp  aleonas_tales.desktop.in  appveyor.yml  build-win32-cross.sh  build.bat  build.sh  cdda2wav_wrapper.c  default.cm  endian.h  extractdata.ini  pud-specs.txt  pud.c  pud.cpp  pud.h  pudconvert.c  pudconvert.cbp  pudconvert.cpp  pudconvert.dsp  release.rb  rip_music.h  rip_music_unix.c  rip_music_unix.cpp  rip_music_win32.c  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: macos.yml
StormLib/: CMakeLists.txt  Makefile.mac
StormLib/src/: StormPort.h
campaigns/: sms.template
campaigns/human/: level01h_c.sms  level02h_c.sms  level03h_c.sms  level04h_c.sms  level04h_c.sms.template  level05h_c.sms  level06h_c.sms  level07h_c.sms  level07h_c.sms.template  level08h_c.sms  level08h_c.sms.template  level09h_c.sms  level10h_c.sms  level10h_c.sms.template  level11h_c.sms  level11h_c.sms.template  level12h_c.sms  level13h_c.sms  level13h_c.sms.template  level14h_c.sms
campaigns/human-exp/: levelx01h_c.sms  levelx02h_c.sms  levelx02h_c.sms.template  levelx03h_c.sms  levelx04h_c.sms  levelx05h_c.sms  levelx06h_c.sms  levelx07h_c.sms  levelx08h_c.sms  levelx09h_c.sms  levelx10h_c.sms  levelx10h_c.sms.template  levelx11h_c.sms  levelx11h_c.sms.template  levelx12h_c.sms  levelx12h_c.sms.template
campaigns/human-ftm/: 1. Tutorial.smp  1. Tutorial.sms  1. Tutorial.txt  2. Witch Hunt.smp  2. Witch Hunt.sms  2. Witch Hunt.txt  3. Desert Survival.smp  3. Desert Survival.sms  human-ftm.lua  level01h.smp  level01h.sms  level01h_c.sms  level01h_c2.sms  level02h.smp  level02h.txt  level02h_c.sms  level02h_c2.sms  tutorial.smp  tutorial.sms  tutorial.txt
campaigns/human-tales/: human-tales.lua  level01h.smp  level01h.sms  level01h.txt  level01h_c.sms  level01h_c2.sms  level02h.smp  level02h.sms  level02h.txt  level02h_c.sms  level02h_c2.sms  level03h.smp  level03h.sms  level03h.txt  level03h_ai.lua  level03h_c.sms  level03h_c2.sms  level04h.smp  level04h.sms  level04h.txt  level04h_ai.lua  level04h_c.sms  level04h_c2.sms  level05h.smp  level05h.sms  level05h_ai.lua  level05h_c.sms  level05h_c2.sms  level06h.smp  level06h.sms  level06h_ai.lua  level06h_c.sms  level07h.smp  level07h.sms  level07h_ai.lua  level07h_c.sms  level07h_c2.sms  level08h.smp  level08h.sms  level09h.smp  (+5 more)
campaigns/list/: Beyond the Dark Portal (Alliance)  Beyond the Dark Portal (Horde)  For the Motherland (Alliance)  For the Motherland (Horde)  Frontier Force (Alliance)  Frontier Force (Alliance).lua  Tides of Darkness (Alliance)  Tides of Darkness (Horde)
campaigns/orc/: level01o_c.sms  level01o_c.sms.template  level02o_c.sms  level02o_c.sms.template  level03o_c.sms  level03o_c.sms.template  level04o_c.sms  level05o_c.sms  level05o_c.sms.template  level06o_c.sms  level07o_c.sms  level08o_c.sms  level08o_c.sms.template  level09o_c.sms  level10o_c.sms  level11o_c.sms  level12o_c.sms  level13o_c.sms  level14o_c.sms
campaigns/orc-exp/: levelx01o_c.sms  levelx01o_c.sms.template  levelx02o_c.sms  levelx02o_c.sms.template  levelx03o_c.sms  levelx04o_c.sms  levelx05o_c.sms  levelx06o_c.sms  levelx07o_c.sms  levelx07o_c.sms.template  levelx08o_c.sms  levelx09o_c.sms  levelx10o_c.sms  levelx11o_c.sms  levelx11o_c.sms.template  levelx12o_c.sms  levelx12o_c.sms.template
campaigns/orc-ftm/: level01o.smp  level01o.sms  level01o_c.sms  level01o_c2.sms  orc-ftm.lua
cmake/modules/: FindGTK2.cmake  FindMakeNSIS.cmake  FindStormLib.cmake  FindStratagus.cmake
debian/: changelog  config  control  copyright  dirs  docs  install  manpages  menu  org.stratagus.wargus.service  postinst  postrm  pudconvert.6  rules  templates  wargus.6  wargus.desktop  wartool.6  wrapper
debian/po/: templates.pot
doc/: changelog  install.html  pud-specs.txt  pudconvert.6  wargus.6  wartool.6
graphics/missiles/: arrow.png.txt  axe.png.txt  ballista-catapult impact.png.txt  cannon explosion.png.txt  explosion.png.txt  lightning.png.txt  rune.png.txt  small fire.png.txt
graphics/ui/: Credits_for_extension_background.txt  buttons 1.png.txt  buttons 2.png.txt
mac/: Info.plist  bundle.sh  launchscript.sh
maps/: level01o.smp  level01o.sms  tutorial.smp  tutorial.sms
maps/contrib/: (2)king-in-stone.pud  (3)calculate.pud  (3)man-on-the-moon.pud  (4)arctic-goldrush.pud  (4)east-lakes.pud  (4)holy-forest.pud  (4)scandinavia.txt  (4)smile.pud  (4)tournament-forest.pud  (4)what-can-you-do.pud  (4)woody-islands.pud  (4)you-have-to-look-around.pud  (5)diablospiral.txt  (5)venedig.pud  (7)many-frontiers.pud  (8)are-you-lucky.txt  (8)death-in-the-rocks.pud  (8)diablomaze.txt  (8)everywhere.pud  (8)oil-is-the-key.pud  (8)tournament-continent.pud
maps/fl/: (6)canyon-way.smp  (+7 more)
music/: Human Battle 1.ogg.txt  Human Battle 2.ogg.txt  Human Battle 3.ogg.txt  Human Battle 4.ogg.txt  Human Battle 5.mod  Human Battle 5.mod.txt  Human Battle 5.ogg.txt  Human Defeat.txt  Human Victory.txt  Main Menu.ogg.txt
scripts/: .cvsignore  ai.ccl  ai.lua  anim.ccl  anim.lua  buttons.ccl  buttons.lua  campaigns.ccl  campaigns.lua  cheats.lua  clone.ccl  commands.lua  constructions.ccl  constructions.lua  credits.ccl  credits.lua  database.lua  directcontrol.lua  editor.ccl  editor.lua  extract.lua  extraction.lua  fonts.ccl  fonts.lua  fov.lua  freecraft.ccl  guichan.lua  guile.ccl  helpers.lua  icons.ccl  icons.lua  keystrokes.ccl  keystrokes.lua  menus.ccl  menus.lua  missiles.ccl  missiles.lua  multiplayer.lua  ranks.ccl  ranks.lua  (+28 more)
tests/: .gitignore  BNE-ENG-MAC.testcase  CMakeLists.txt  Warcraft2BNE-ENG.testcase  generate_test_case.py  run_tests.py  wartool.pro
uml/: fc_scripts.md
warinstall/: .cvsignore  StdAfx.cpp  StdAfx.h  Warinstall2Dlg.h  resource.h  warinstall.aps  warinstall.clw  warinstall.cpp  warinstall.dsp  warinstall.dsw  warinstall.h  warinstall.rc  warinstall2Dlg.cpp  warinstallDlg.cpp  warinstallDlg.h
(+392 files in other folders)
